# NetworkApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev_build_run.sh
APP/: CMakeLists.txt
APP/Client/: CMakeLists.txt
APP/Client/Include/: Client.h
APP/Client/Src/: Client.cpp
APP/Server/: CMakeLists.txt
APP/Server/Include/: chatServer.h
APP/Server/Src/: Server.cpp
Diagramms/: NetworkApp.drawio
Include/: FileSending.h  SessionManager.h  Special_Session.h  TCP_Session.h  UDP_Sesison.h
Include/base/: BaseServer.h  BaseSession.h
Include/interface/: NetworkApp.hpp  Session.h
LIB/: CMakeLists.txt
LIB/BASE/: CMakeLists.txt
LIB/BASE/Client/: CMakeLists.txt
LIB/BASE/Client/Include/: BaseClient.h
LIB/BASE/Client/Src/: BaseClient.cpp
LIB/BASE/Protocols/: CMakeLists.txt
LIB/BASE/Protocols/TCP/: CMakeLists.txt
LIB/BASE/Protocols/TCP/Include/: TCP_Protocol.h
LIB/BASE/Protocols/TCP/Src/: TCP_Protocol.cpp
LIB/BASE/Protocols/UDP/: CMakeLists.txt
LIB/BASE/Protocols/UDP/Include/: UDP_Protocol.h
LIB/BASE/Protocols/UDP/Src/: UDP_Protocol.cpp
LIB/BASE/Server/: CMakeLists.txt
LIB/BASE/Server/Include/: BaseServer.h
LIB/BASE/Server/Src/: BaseServer.cpp
LIB/BASE/Session/: CMakeLists.txt
LIB/BASE/Session/Include/: BaseSession.h
LIB/BASE/Session/Src/: BaseSession.cpp
LIB/ConnectionAcceptor/: CMakeLists.txt
LIB/ConnectionAcceptor/Include/: ConnectionAcceptor.h
LIB/ConnectionAcceptor/Src/: ConnectionAcceptor.cpp
LIB/INTERFACE/: CMakeLists.txt  INetworkApp.hpp  IProtocol.hpp  ISession.hpp
LIB/Patterns/: CMakeLists.txt
LIB/Patterns/Singleton/: Singleton.hpp
LIB/SessionManager/: CMakeLists.txt
LIB/SessionManager/Include/: SessionManager.h
LIB/SessionManager/Src/: SessionManager.cpp
Src/: Client.cpp  Server.cpp
Src/APP/: Client.cpp  chatServer.cpp  ftpServer.cpp
Src/LIB/: BaseServer.cpp  SessionManager.cpp
Tests/: CMakeLists.txt  test_network_server.cpp
Tests/integration/: ClientToServerConnection.cpp
Tests/mocks/src/: mockServer.cpp
cmake/: app.cmake  cmake_colors.cmake  includeBoost.cmake  lib.cmake
